<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tikkel.ui.home.HomeFragment"
        android:label="@string/title_home_k"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_withdraw"
        android:name="com.example.tikkel.ui.withdraw.WithdrawFragment"
        android:label="@string/title_withdraw_k"
        tools:layout="@layout/fragment_withdraw" />

    <fragment
        android:id="@+id/navigation_display"
        android:name="com.example.tikkel.ui.display.DisplayFragment"
        android:label="@string/title_display_k"
        tools:layout="@layout/fragment_display" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.tikkel.ui.setting.SettingFragment"
        android:label="@string/title_settings_k"
        tools:layout="@layout/fragment_setting" />


</navigation>